--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="Listen for response"
                 android:id="@+id/eventListenSwitch" android:checked="true"
-                android:textSize="20dp" android:onClick="onListenForResponseChanged"/>
+                android:textSize="20dp" />
     </LinearLayout>
     <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                   android:layout_height="wrap_content" android:id="@+id/linearLayout"
