--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,9 +13,14 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HTTP GET"
-            android:id="@+id/button" android:layout_gravity="center_horizontal"
-            android:onClick="onPerformHttpClicked" android:layout_margin="16dp"/>
+            android:text="MultiGet"
+            android:id="@+id/multiGetButton" android:layout_gravity="center_horizontal"
+            android:onClick="onMultiGetClicked" android:layout_margin="16dp"/>    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HTTP GET"
+        android:id="@+id/button" android:layout_gravity="center_horizontal"
+        android:onClick="onPerformHttpClicked" android:layout_margin="16dp"/>
     <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" android:layout_margin="8dp">
